# src/api/middleware/authMiddleware.go
@@ -7,14 +7,14 @@ import (
 	"github.com/Arshia-Izadyar/Fast-Gopher/src/common"
 	"github.com/Arshia-Izadyar/Fast-Gopher/src/config"
 	"github.com/Arshia-Izadyar/Fast-Gopher/src/constants"
-	"github.com/Arshia-Izadyar/Fast-Gopher/src/data/redis"
+	"github.com/Arshia-Izadyar/Fast-Gopher/src/data/cache"
 	"github.com/Arshia-Izadyar/Fast-Gopher/src/pkg/service_errors"
 	"github.com/gofiber/fiber/v2"
 )
 
 func New(cfg *config.Config) fiber.Handler {
 	return func(c *fiber.Ctx) error {
-		authHeader := c.Get("Authorization")
+		authHeader := c.Get("authorization")
 		if authHeader == "" {
 			return c.Status(fiber.StatusUnauthorized).JSON(helper.GenerateResponseWithError(&service_errors.ServiceError{EndUserMessage: service_errors.TokenNotPresent}, false))
 		}
@@ -22,7 +22,7 @@ func New(cfg *config.Config) fiber.Handler {
 		if len(slicedToken) != 2 || slicedToken[0] != "Bearer" {
 			return c.Status(fiber.StatusUnauthorized).JSON(helper.GenerateResponseWithError(&service_errors.ServiceError{EndUserMessage: service_errors.TokenInvalidFormat}, false))
 		}
-		_, err := redis.Get[bool](slicedToken[1])
+		_, err := cache.Get[bool](slicedToken[1])
 		if err == nil {
 			return c.Status(fiber.StatusUnauthorized).JSON(helper.GenerateResponseWithError(&service_errors.ServiceError{EndUserMessage: service_errors.TokenInvalid}, false))
 		}
